# atai

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  shell.nix
src/: adapters.rs  config.rs  main.rs  parse.rs
src/adapters/: chatgpt.rs
