[package]
name = "atai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clipboard"]
clipboard = ["dep:clipboard"]

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive"] }
clipboard = { version = "0.5.0", optional = true }
crossterm = "0.26.1"
dialoguer = "0.10.4"
eventsource-stream = "0.2.3"
futures = "0.3.28"
home = "0.5.5"
markdown = "0.3.0"
reqwest = { version = "0.11.18", features = [
    "json",
    "deflate",
    "rustls-tls",
    "stream",
], default-features = false }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
termimad = "0.23.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.release]
panic = "abort"
lto = "thin"
strip = true
